--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,9 @@
 name: Build
 
-on:
+on: 
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    tags:
+    - '*'
 
 jobs:
   build:
